			ROX-Session
			Session manager for the ROX desktop
			by Thomas Leonard

01-Feb-2006
~~~~~~~~~~~
Trap errors from commands that xsettings.py runs on start up (Stephen Watson).
For reasons known only to itself, dtlogin start the session with stdin 
redirected from /, which causes Python to segfault.  Have our script run
ROX-Session with stdin from /dev/null (Stephen Watson).

28-Jan-2006
~~~~~~~~~~~
Debian no longer provide Python D-BUS bindings for their default version
of Python. Grrr. If we can't import dbus and we're on Python 2.3 or earlier,
try running again with Python 2.4 (Thomas Leonard).

21-Jan-2006
~~~~~~~~~~~
Made DBus 0.2x support work again (Thomas Leonard).
Don't fail to start if Environment.py is missing (Thomas Leonard).
Offer to restart the window manager when the setting changes (Thomas Leonard).

19-Jan-2006
~~~~~~~~~~~
Now loads session environment from Environment.py instead of Environment
(Stephen Watson).

17-Jan-2006
~~~~~~~~~~~
Use correct interface for settings (Stephen Watson).

16-Jan-2006
~~~~~~~~~~~
main.py and settings.py updated for DBus 0.3x, needs checking it still
works under 0.2x (Stephen Watson).

31-Dec-2005
~~~~~~~~~~~
Fixed some problems with the new code (Thomas Leonard; reported by Babyfai
Cheung).

03-Nov-2005
~~~~~~~~~~~
Started rewriting in Python (Thomas Leonard).

23-Oct-2005
~~~~~~~~~~~
Support KDM when doing "Add to login" (Stephen Watson).

04-Oct-2005
~~~~~~~~~~~
Fixed C code for dbus 0.36: part of a previous patch was missing, and a
workaround was needed for dbus bug 4637 (Tony Houghton).

02-Sep-2005
~~~~~~~~~~~
Added options for screen blanking with DPMS (Tony Houghton).

31-Aug-2005
~~~~~~~~~~~
Updated Chinese translations (Babyfai Cheung).

30-Aug-2005
~~~~~~~~~~~
Generate Python messages.pot in the right place (Babyfai Cheung).

29-Aug-2005
~~~~~~~~~~~
Fixed update-po to include Python strings (Thomas Leonard; reported by babyfai
Cheung).